Added link to the theme's permalink page

--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
 
 				<p id="attribution">
 					
-					<a href="http://www.tumblr.com">Tumblr</a> powered. Day Dream theme by 
+					<a href="http://www.tumblr.com">Tumblr</a> powered. 
+					<a href="http://www.tumblr.com/theme/391">Day Dream theme</a> by 
 					<a href="http://valhallaisland.com">Jim Whimpey</a>.
 					
 				</p>
