--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
         <link rel="shortcut icon" href="{Favicon}">
         <link rel="alternate" type="application/rss+xml" href="{RSS}">
-		<link rel="stylesheet" href="http://static.jimwhimpey.com/tumblr/daydream/reset.css" type="text/css" media="screen" charset="utf-8" />
-		<link rel="stylesheet" href="http://static.jimwhimpey.com/tumblr/daydream/style.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="http://static.tumblr.com/ttz4bff/146kh15fj/reset.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="http://static.tumblr.com/ttz4bff/l1Tkh15f7/style.css" type="text/css" media="screen" charset="utf-8" />
         
         <meta name="viewport" content="width=920"/>
         <link rel="apple-touch-icon" href="http://assets.tumblr.com/images/default_avatar_128.gif"></link>
@@ -20,7 +20,7 @@
 			{CustomCSS}
 		</style>
 		
-		<script type="text/javascript" charset="utf-8" src="http://static.jimwhimpey.com/tumblr/daydream/jquery.min.js"></script>
+		<script type="text/javascript" charset="utf-8" src="http://static.tumblr.com/ttz4bff/HeJkh15dl/jquery.min.js"></script>
 		
 		<script type="text/javascript" charset="utf-8">
 			
